--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,8 @@ jobs:
     
     - name: Test CLI import
       run: |
-        python -c "from cli import main; print('CLI import successful')"
+        python -c "import cli; print('CLI import successful')"
+        # OR try: python -c "import sys; sys.path.append('.'); from cli import main; print('CLI import successful')"
 
   publish:
     needs: test
