--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
-
 include README.md
 include LICENSE
 include requirements.txt
-recursive-include agent *.py
-recursive-include tools *.py
-recursive-include utils *.py
-recursive-include config *.py
+include VERSION
+include CHANGELOG.md
+include INSTALL_EDUCATORS.md
+include CONTRIBUTING.md
+recursive-include elimu_research_assistant *.py
